--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                 </div>
                 
                 <div class="contact-info">
-                    <a href="mailto:hernanbeltranm@gmail.com" class="contact-item">
+                    <a href="mailto:beltranmunozh@gmail.com" class="contact-item">
                         <div class="contact-icon">
                             <i class="fas fa-envelope"></i>
                         </div>
@@ -304,7 +304,7 @@
                         </div>
                         <span>GitHub</span>
                     </a>
-                    <a href="https://www.linkedin.com/in/hernan-beltran-munoz" target="_blank" class="contact-item">
+                    <a href="https://www.linkedin.com/in/hern%C3%A1n-yecid-beltr%C3%A1n-mu%C3%B1oz/" target="_blank" class="contact-item">
                         <div class="contact-icon">
                             <i class="fab fa-linkedin"></i>
                         </div>
