--- a/index.html
+++ b/index.html
@@ -117,6 +117,10 @@
                             <i class="fas fa-graduation-cap"></i>
                             <span>Estudiante UNAD</span>
                         </div>
+                        <div class="fact-item">
+                            <i class="fas fa-graduation-cap"></i>
+                            <span>Estudiante Cesde</span>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -194,6 +198,7 @@
                         <span class="skill-tag"><i class="fab fa-github"></i> GitHub</span>
                         <span class="skill-tag"><i class="fas fa-database"></i> MySQL</span>
                         <span class="skill-tag"><i class="fas fa-code"></i> VS Code</span>
+                        <span class="skill-tag"><i class="fas fa-code"></i> IntelliJ IDEA</span>
                     </div>
                 </div>
             </div>
@@ -251,10 +256,25 @@
                         <i class="fas fa-clock"></i> Estudiante Actual
                     </p>
                     <p>
-                        Formación académica en tecnología, ampliando continuamente conocimientos 
+                        Formación académica en Tecnología en el Desarrollo de Software 3° semestre, ampliando continuamente conocimientos 
                         en desarrollo de software y buenas prácticas de programación.
                     </p>
                 </div>
+                
+                <div class="education-card">
+                    <div class="education-icon">
+                        <i class="fas fa-university"></i>
+                    </div>
+                    <h3>Centro de Estudios de Sistemas y Desarrollo Empresarial</h3>
+                    <h4>Cesde</h4>
+                    <p class="education-status">
+                        <i class="fas fa-clock"></i> Estudiante Actual
+                    </p>
+                    <p>
+                        Formación académica en Técnico laboral como auxiliar en sistemas 3° semestre, ampliando conocimientos en java, sql, html,css y bootstrap, además de fortalecer habilidades prácticas en globant
+                    </p>
+                </div>
+
                 <div class="education-card">
                     <div class="education-icon">
                         <i class="fas fa-code"></i>
