--- a/index.html
+++ b/index.html
@@ -157,6 +157,15 @@
                             <div class="skill-progress" data-progress="80"></div>
                         </div>
                     </div>
+                    <div class="skill-item">
+                        <div class="skill-header">
+                            <span class="skill-name">Python</span>
+                            <span class="skill-percent">50%</span>
+                        </div>
+                        <div class="skill-bar">
+                            <div class="skill-progress" data-progress="50"></div>
+                        </div>
+                    </div>
                 </div>
 
                 <!-- Frontend -->
