--- a/index.html
+++ b/index.html
@@ -232,9 +232,8 @@
                         <h3>Trainee Developer</h3>
                         <h4><i class="fas fa-building"></i> Globant</h4>
                         <p>
-                            Desarrollo de aplicaciones backend utilizando Java y SQL. Colaboración en proyectos 
-                            que requieren soluciones escalables y código optimizado. Participación activa en 
-                            el ciclo completo de desarrollo de software.
+                            Desarrollo de aplicaciones backend utilizando Java y SQL. Participación activa en 
+                            el ciclo de aprendisaje de desarrollo de software.
                         </p>
                         <div class="timeline-tags">
                             <span class="tag">Java</span>
